# usearch

./: android-toolchain.cmake  deploy.sh  deploy_sqlite.sh  ohos-toolchain.cmake
cpp/: test.cpp
sqlite_cpp/: CMakeLists.txt  sqlite_usarch_test.cpp
